# RAG-t-v-n-tuy-n-sinh-STU.

./: .env  README.md  create_vector_data_base.py  main.py  pyproject.toml  test_model_Llm.py
data/processed/: a1.txt  a2.txt  giaiptb1.txt  giaiptb2.txt
learning_PromptTemplate/: 01.py
src/: Untitled  config.py  data_ingestion.py  generator.py  memory.py  retriever.py
vector_db/faiss_index/: index.faiss  index.pkl
