[project]
name = "tu-van-tuyen-sinh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "onnxruntime<1.24",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20260107",
    "pi-heif>=1.3.0",
    "pypdf>=6.7.5",
    "unstructured[all-docs,ocr]>=0.18.32",
    "unstructured-inference>=1.2.0",
    "pytesseract>=0.3.13",
    "unstructured-pytesseract>=0.3.15",
]
